# waybar-claude-usage

./: Cargo.toml  README.md  claude-usage.sh
src/: main.rs
