[package]
name = "waybar-claude-usage"
version = "0.1.4"
edition = "2024"
description = "Waybar plugin that shows you usage window for claude"
license = "MIT"
repository = "https://github.com/kloki/waybar-claude-usage"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
